Cadastro de Usuários

--- a/cadastro.html
+++ b/cadastro.html
@@ -126,7 +126,7 @@
 <body>
     <div class="container">
         <h1>Cadastro de Usuário</h1>
-        <form action="" method="POST" id="cadastroForm">
+        <form action="cadastro.php" method="POST" id="cadastroForm">
             <!-- Dados Pessoais -->
             <div class="form-group">
                 <label for="nome">Nome Completo*</label>
