--- a/menu.html
+++ b/menu.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="menu.css">
     <title>Pizzaria</title>
 </head>
 <body>
-    <p>teste</p>
+    <div class="container">
+        <h1>Fazer um Pedido</h1>
+        
+    </div>
 </body>
 </html>
