--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,23 @@
 <body>
     <div class="container">
         <h1>Fazer um Pedido</h1>
-        
+        <div class="containergeral">
+            <div class="salgadas">
+                <h2>pizzas salgadas</h2>
+                <img class="imagens" src="images/marguerita.jpg" alt="pizza marguerita">
+                <button>adicionar</button>
+            </div>
+            <div class="doces">
+                <h2>pizzas doces</h2>
+                <img class="imagens" src="images/Brigadeiro.png" alt="pizza brigadeiro">
+                <button>adicionar</button>
+            </div>
+            <div class="bebidas">
+                <h2>bebidas</h2>
+                <img class="imagens" src="images/guarana.jpg" alt="guarana">
+                <button>adcionar</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
