--- a/cadastro.html
+++ b/cadastro.html
@@ -113,6 +113,29 @@
             cursor: not-allowed;
         }
 
+        .links-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .link {
+            color: #4a90e2;
+            text-decoration: none;
+            font-size: 14px;
+            margin: 0 10px;
+        }
+
+        .link:hover {
+            text-decoration: underline;
+        }
+
+        .image{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        /* Define o estilo do form para dispositivos com 480px ou menor*/
         @media (max-width: 480px) {
             form {
                 min-width: auto;
@@ -127,6 +150,10 @@
     <div class="container">
         <h1>Cadastro de Usuário</h1>
         <form action="cadastro.php" method="POST" id="cadastroForm">
+
+            <div class="image">
+                <img src="images/logotipo.png" alt="Logotipo" width="70px">
+            </div>
             <!-- Dados Pessoais -->
             <div class="form-group">
                 <label for="nome">Nome Completo*</label>
@@ -202,6 +229,10 @@
             </div>
 
             <button type="submit" class="button" id="submitButton">Cadastrar</button>
+
+            <div class="links-container">
+                <a href="index.php" class="link">Já possui uma conta?</a>
+            </div>
         </form>
     </div>
 
