--- a/cadastro.html
+++ b/cadastro.html
@@ -231,7 +231,7 @@
             <button type="submit" class="button" id="submitButton">Cadastrar</button>
 
             <div class="links-container">
-                <a href="index.php" class="link">Já possui uma conta?</a>
+                <a href="index.html" class="link">Já possui uma conta?</a>
             </div>
         </form>
     </div>
